--- a/index.html
+++ b/index.html
@@ -555,10 +555,11 @@
         No data collection. No login. Just quick links to official resources.
       </p>
       <ul class="modalBullets">
-        <li>We don’t ask for your address, party, or personal info.</li>
-        <li>We don’t store anything about you.</li>
-        <li>You tap a button, we open a trusted destination in a new tab.</li>
-      </ul>
+  <li>Ballot Buddy doesn’t ask for or store your address, party, or personal info.</li>
+  <li>Some links we open (like Vote.org) may ask for an address to find your polling place.</li>
+  <li>We don’t store anything about you.</li>
+  <li>You tap a button, we open a trusted destination in a new tab.</li>
+</ul>
       <div class="modalActions">
         <button class="modalBtn" id="trustOk" type="button">Got it</button>
       </div>
