--- a/index.html
+++ b/index.html
@@ -563,6 +563,13 @@
       <div class="modalActions">
         <button class="modalBtn" id="trustOk" type="button">Got it</button>
       </div>
+
+<div class="trustLinks">
+  <a href="./privacy.html">Privacy</a>
+  <span class="dot">·</span>
+  <a href="./support.html">Support</a>
+</div>
+      
     </div>
   </div>
 
