--- a/index.html
+++ b/index.html
@@ -404,6 +404,33 @@
       .panel{ padding: 22px 16px 16px; }
       h1{ font-size: 26px; }
     }
+
+.trustLinks{
+  margin-top: 14px;
+  display:flex;
+  justify-content:flex-start;
+  align-items:center;
+  gap: 10px;
+  flex-wrap: wrap;
+  font-weight: 800;
+  font-size: 12px;
+  color: rgba(255,255,255,0.85);
+}
+
+.trustLinks a{
+  color: rgba(255,255,255,0.90);
+  text-decoration: none;
+  padding: 6px 8px;
+  border-radius: 10px;
+  border: 1px solid rgba(255,255,255,0.14);
+  background: rgba(255,255,255,0.08);
+}
+
+.trustLinks a:hover{
+  background: rgba(255,255,255,0.14);
+}
+.trustLinks .dot{ opacity: 0.6; }
+    
   </style>
 </head>
 
