--- a/index.html
+++ b/index.html
@@ -565,7 +565,14 @@
         </div>
       </div>
 
-      <div class="footer">Powered by builtbyeljefe</div>
+<div class="footer">
+  <span>Powered by builtbyeljefe</span>
+  <span class="dot">·</span>
+  <a class="footerLink" href="./privacy.html">Privacy</a>
+  <span class="dot">·</span>
+  <a class="footerLink" href="./support.html">Support</a>
+</div>
+      
     </div>
   </div>
 
@@ -590,12 +597,6 @@
       <div class="modalActions">
         <button class="modalBtn" id="trustOk" type="button">Got it</button>
       </div>
-
-<div class="trustLinks">
-  <a href="./privacy.html">Privacy</a>
-  <span class="dot">·</span>
-  <a href="./support.html">Support</a>
-</div>
       
     </div>
   </div>
