--- a/index.html
+++ b/index.html
@@ -438,7 +438,12 @@
   <div class="wrap">
     <div class="panel">
       <div class="brand">
-        <div class="logoBadge" aria-label="Ballot Buddy logo">
+
+
+      <div class="logoBadge" aria-label="Ballot Buddy logo">
+  <img class="appLogo" src="./assets/ballot-buddy-icon.png" alt="Ballot Buddy logo">
+</div>
+
           <!-- Friendly "ballot box" SVG (warm blue, no red) -->
           <svg width="58" height="58" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true">
             <defs>
