--- a/index.html
+++ b/index.html
@@ -426,6 +426,15 @@
   background: rgba(255,255,255,0.08);
 }
 
+    .appLogo{
+  width: 58px;
+  height: 58px;
+  display: block;
+  border-radius: 16px;
+  object-fit: cover;
+  box-shadow: 0 10px 22px rgba(0,0,0,0.18);
+}
+
 .trustLinks a:hover{
   background: rgba(255,255,255,0.14);
 }
