--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ballot Buddy</title>
+
+  <!-- Optional, but recommended for previews + home screen -->
+  <link rel="icon" href="./assets/ballot-buddy-icon.png">
+  <link rel="apple-touch-icon" href="./assets/ballot-buddy-icon.png">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap">
 
   <style>
@@ -29,7 +34,6 @@
 
       /* modal */
       --overlay: rgba(5, 18, 45, 0.55);
-      --modalBg: rgba(255,255,255,0.14);
       --modalStroke: rgba(255,255,255,0.22);
     }
 
@@ -119,7 +123,6 @@
       overflow: hidden;
     }
 
-    /* NEW: icon inside badge */
     .appLogo{
       width: 74px;
       height: 74px;
@@ -147,7 +150,6 @@
       z-index: 1;
     }
 
-    /* stack adds spacing between dropdown, buttons, and share card */
     .stack{
       display: flex;
       flex-direction: column;
@@ -440,7 +442,6 @@
         <div class="logoBadge" aria-label="Ballot Buddy logo">
           <img class="appLogo" src="./assets/ballot-buddy-icon.png" alt="Ballot Buddy logo">
         </div>
-
         <h1>Ballot Buddy</h1>
       </div>
 
