--- a/index.html
+++ b/index.html
@@ -540,13 +540,14 @@
         </div>
       </div>
 
-      <div class="footer">
-        <span>Powered by builtbyeljefe</span>
-        <span class="dot">·</span>
-        <a class="footerLink" href="./privacy.html">Privacy</a>
-        <span class="dot">·</span>
-        <a class="footerLink" href="./support.html">Support</a>
-      </div>
+<div class="footer">
+  <span>Powered by builtbyeljefe</span>
+  <span class="dot">·</span>
+  <a class="footerLink" id="link-privacy" href="privacy.html">Privacy</a>
+  <span class="dot">·</span>
+  <a class="footerLink" id="link-support" href="support.html">Support</a>
+</div>
+      
     </div>
   </div>
 
