--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Ballot Buddy</title>
 
   <!-- Optional, but recommended for previews + home screen -->
-  <link rel="icon" href="./assets/ballot-buddy-icon.png">
-  <link rel="apple-touch-icon" href="./assets/ballot-buddy-icon.png">
+  <img src="/ballotbuddy/assets/ballot-buddy-icon.png" alt="Ballot Buddy">
+  <link rel="apple-touch-icon" href="/ballotbuddy/assets/ballot-buddy-icon.png">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap">
 
