--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ballot Buddy</title>
 
-  <!-- Optional, but recommended for previews + home screen -->
-  <img src="/ballotbuddy/assets/ballot-buddy-icon.png" alt="Ballot Buddy">
-  <link rel="apple-touch-icon" href="/ballotbuddy/assets/ballot-buddy-icon.png">
+  <!-- App / tab icons -->
+<link rel="icon" href="/ballotbuddy/assets/ballot-buddy-icon.png">
+<link rel="apple-touch-icon" href="/ballotbuddy/assets/ballot-buddy-icon.png">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap">
 
